Et2Select changes: - Position search & edit inputs to avoid reflow - When editing a freeEntry, blurring accepts the current value, before it canceled the edit

--- a/api/templates/default/etemplate2.css
+++ b/api/templates/default/etemplate2.css
@@ -92,6 +92,7 @@
 
 ::part(form-control-input) {
     flex: 1 1 auto;
+    position: relative;
 }
 
 ::part(form-control-help-text) {
